signin and signup integrated

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GovSchedulaDBConnection": "Server=ACEXEDGE00\\SQLEXPRESS;Database=GovSchedulaDB; Integrated Security = true; MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
